# mahjong-utils

./: .dockerignore  .eslintrc.js  .gitignore  .gitmodules  Dockerfile  README-zh.md  README.md  build.gradle.kts  entry.ts  gradle.properties  jest.config.js  main.py  package.json  pyproject.toml  requirements.txt  settings.gradle.kts  setup.py  tsconfig.json  update-version.py
.github/workflows/: build-cli.yml  build-entry-fatjar.yml  docker-publish.yml  dokka-gfm.yml  gradle-publish.yml  kover-report.yml  node-package.yml  python-build.yml  python-package.yml  (+2 more)
demo/: package.json
docs/: index.md
gradle/: libs.versions.toml
hora/: coder.ts  models.ts  yaku.ts
js-lib/: .eslintrc.cjs  .gitignore  package.json  tsconfig.json
mahjong-utils/: build.gradle.kts
mahjong-utils-benchmark/: build.gradle.kts
mahjong-utils-cli/: build.gradle.kts
mahjong-utils-entry/: .gitignore  build.gradle.kts
mahjong-utils-native-sharedlib/: build.gradle.kts
mahjong-utils-webapi/: build.gradle.kts
mahjong_utils/: hora.py  point_by_han_hu.py  shanten.py  syanten.py
models/: Furo.ts  Mentsu.ts  Tatsu.ts  Tile.spec.ts
point-by-han-hu/: index.spec.ts  index.ts
python/: README.md  pyproject.toml
python-lib/: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.py
shanten/: index.spec.ts  index.ts
src/: entry.js  entry.ts  index.js  index.ts
test/: test_furo.py  test_han_hu.py  test_hora.py  test_shanten.py  test_syanten.py  test_yaku.py
test-cases/: build.gradle.kts
tests/: test_bridge.py  test_han_hu.py  test_hora.py  test_shanten.py
utils/: obj-map.ts
(+942 files in other folders)
