[tool.poetry]
name = "mahjong-utils"
version = "0.1.0-alpha.01"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mahjong_utils" }]

[tool.poetry.dependencies]
python = "^3.7"
lazy = "^1.5"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
